--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,17 @@
 html, body {
+    height: 100%;;
     margin: 0;
-    height: 100%;
     display: flex;
     flex-direction: column;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
     font-family: sans-serif;
     background-color: rgb(238, 238, 238);
   
 }
 
-.page-container {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-}
-
 .main-most-container {
-    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,7 +50,7 @@ body {
     margin: auto;
     width: 50%;
     /* border: 3px solid green; */
-    padding-bottom: 300px;
+    padding: 10px;
     background-color: white;
     border-radius: 12px;
     margin-bottom: 10px;
@@ -127,7 +118,6 @@ body {
 }
 
 footer {
-    margin-top: auto;
     font-size: 18px;
     /* background-color: red; */
     color: black;
